<resources>
    <string name="app_name">Darts Counter</string>
    <string name="start_title">Prepare Game</string>
    <string name="players">Players</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="game_mode">Game Mode</string>
    <string name="points">Points</string>
    <string name="start_game">Start Game</string>

    <string-array name="game_modes">
        <item>Single Out</item>
        <item>Double Out</item>
        <!--<item>Master Out</item>-->
    </string-array>

    <string-array name="game_points">
        <item>301</item>
        <item>501</item>
        <item>701</item>
        <item>901</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="input_language">Input Language</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="finish_mode">Finish Mode</string>
    <string name="voice_input_language_key">voice_input_language</string>
    <string name="finish_mode_key">finish_mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_dialog_title">Exit the game?</string>
    <string name="exit_dialog_msg">All data from the current game will be lost. Do you really want to exit?</string>

</resources>