<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_StartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.startfragment.StartFragment">

    <TextView
        android:id="@+id/tv_StartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_StartPlayersList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_StartPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_StartPlayers" />

    <TextView
        android:id="@+id/tv_StartPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_StartMode" />

    <Button
        android:id="@+id/btn_StartStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_StartPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintBottom_toBottomOf="@+id/sp_StartPoints"
        app:layout_constraintEnd_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_StartPoints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_StartVerticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_StartMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_mode"
        app:layout_constraintBottom_toBottomOf="@+id/sp_StartMode"
        app:layout_constraintEnd_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp_StartMode" />

    <Spinner
        android:id="@+id/sp_StartPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/tv_StartTitle" />

    <Spinner
        android:id="@+id/sp_StartMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintTop_toBottomOf="@+id/sp_StartPoints" />

    <Button
        android:id="@+id/btn_StartAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        app:layout_constraintBottom_toBottomOf="@+id/et_StartPlayerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintTop_toTopOf="@+id/et_StartPlayerName" />

    <EditText
        android:id="@+id/et_StartPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        android:tooltipText="@string/player_name"
        app:layout_constraintBottom_toTopOf="@+id/btn_StartStart"
        app:layout_constraintEnd_toStartOf="@+id/gl_StartVerticalCenter"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>